2016-01-22  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	Backport from mainline
	2016-01-22  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/69403
	* config/arm/thumb2.md (*thumb2_ior_scc_strict_it): Convert to
	define_insn_and_split.  Ensure operands[1] and operands[0] do not
	get assigned the same register.

2016-01-22  Bernd Schmidt <bschmidt@redhat.com>

	PR target/63681
	* cfgrtl.c (cfg_layout_initialize): Weaken assert to only trigger if
	flag_reorder_blocks_and_partition.
	* hw-doloop.c (reorg_loops): Avoid reordering if that flag is set.

2016-01-21  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	Backported from mainline
	2015-07-24  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	* config/s390/s390.c (s390_save_gprs_to_fprs): Add CFA_REGISTER
	reg note to the GPR -> FPR save instructions.

2016-01-20  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	Backport from mainline
	2015-09-10  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/67439
	* config/arm/arm.md (*arm32_movhf): Remove !arm_restrict_it from
	predicate.  Set predicable_short_it attr to "no".

2016-01-19  Sergei Trofimovich <siarheit@google.com>

	Backport from mainline
	PR other/60465
	* config/ia64/ia64.c (ia64_expand_load_address): Use gprel64
	for local symbolic operands.
	* config/ia64/predicates.md (local_symbolic_operand64): New
	predicate.

2016-01-17  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	Backport from mainline:
	2016-01-17  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR tree-optimization/68799
	* gimple-ssa-strength-reduction.c (create_phi_basis): Directly
	look up phi candidates in the statement-candidate map.
	(phi_add_costs): Likewise.
	(record_phi_increments): Likewise.
	(phi_incr_cost): Likewise.
	(ncd_with_phi): Likewise.
	(all_phi_incrs_profitable): Likewise.

2016-01-14  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/68648
	* config/arm/arm.md (*andsi_iorsi3_notsi): Try to simplify
	the complement of operands[3] during splitting.
